--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,75 +1,25 @@
 ---
 ---
-
-@article{roget2020grover,
-  title={Grover search as a naturally occurring phenomenon},
-  author={Roget, Mathieu and Guillet, St{\'e}phane and Arrighi, Pablo and Di Molfetta, Giuseppe},
-  journal={Physical Review Letters},
-  volume={124},
-  number={18},
-  pages={180501},
-  year={2020},
-  publisher={APS},
-  abbr={PRL},
-  pdf={https://arxiv.org/pdf/1908.11213.pdf},
-  arxiv={1908.11213},
+@article{tian2023recent,
+  title={Recent advances for quantum neural networks in generative learning},
+  author={Tian, Jinkai and Sun, Xiaoyu and Du, Yuxuan and Zhao, Shanshan and Liu, Qing and Zhang, Kaining and Yi, Wei and Huang, Wanrong and Wang, Chaoyue and Wu, Xingyao and others},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={45},
+  number={10},
+  pages={12321--12340},
+  year={2023},
+  publisher={IEEE}
+  pdf={https://arxiv.org/pdf/2206.03066},
+  arxiv={2206.03066},
   bibtex_show={true}
 }
 
-@article{roget2022quantum,
-  title={Quantum perceptron revisited: Computational-statistical tradeoffs},
-  author={Roget, Mathieu and Di Molfetta, Giuseppe and Kadri, Hachem},
-  booktitle={Uncertainty in Artificial Intelligence},
-  pages={1697--1706},
-  year={2022},
-  organization={PMLR},
-  abbr={UAI},
-  pdf={https://arxiv.org/pdf/2106.02496.pdf},
-  arxiv={2106.02496},
-  bibtex_show={true},
-  code={https://github.com/mroget/Quantum-perceptron-models}
-}
-
-
-@article{roget2020quantum,
-  title={Quantum control using quantum memory},
-  author={Roget, Mathieu and Herzog, Basile and Di Molfetta, Giuseppe},
-  journal={Scientific reports},
-  volume={10},
-  number={1},
-  pages={1--8},
-  year={2020},
-  publisher={Nature Publishing Group},
-  abbr={Scientific reports},
-  pdf={https://arxiv.org/pdf/2009.10408.pdf},
-  arxiv={2009.10408},
+@article{sun2025quantum,
+  title={On Quantum Perceptron Learning via Quantum Search},
+  author={Sun, Xiaoyu and Roget, Mathieu and Di Molfetta, Giuseppe and Kadri, Hachem},
+  journal={arXiv preprint},
+  year={2025}
+  pdf={https://www.arxiv.org/pdf/2503.17308},
+  arxiv={2503.17308},
   bibtex_show={true}
 }
-
-@misc{roget2022optimality,
-  doi = {10.48550/ARXIV.2201.12937},
-  url = {https://arxiv.org/abs/2201.12937},
-  author = {Roget, Mathieu and Kadri, Hachem and Di Molfetta, Giuseppe},
-  title = {Optimality conditions for spatial search with multiple marked vertices},
-  publisher = {ABS},
-  year = {2023},
-  copyright = {Creative Commons Attribution 4.0 International},
-  abbr={PRR},
-  pdf={https://arxiv.org/pdf/2201.12937.pdf},
-  arxiv={2201.12937},
-  bibtex_show={true}
-}
-
-@misc{roget2023distributed,
-      title={Distributed search on graphs using discrete time quantum walk}, 
-      author={Mathieu Roget and Giuseppe Di Molfetta},
-      year={2023},
-      eprint={2310.10451},
-      archivePrefix={arXiv},
-      abbr = {Preprint},
-      primaryClass={quant-ph},
-      pdf={https://arxiv.org/pdf/2310.10451.pdf},
-      arxiv={2310.10451},
-      bibtex_show={true}
-}
-
