modify publication years and .pdf

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   pages={12321--12340},
   year={2023},
   publisher={IEEE}
-  pdf={https://arxiv.org/pdf/2206.03066},
+  pdf={https://arxiv.org/pdf/2206.03066.pdf},
   arxiv={2206.03066},
   bibtex_show={true}
 }
@@ -19,7 +19,7 @@
   author={Sun, Xiaoyu and Roget, Mathieu and Di Molfetta, Giuseppe and Kadri, Hachem},
   journal={arXiv preprint},
   year={2025}
-  pdf={https://www.arxiv.org/pdf/2503.17308},
+  pdf={https://www.arxiv.org/pdf/2503.17308.pdf},
   arxiv={2503.17308},
   bibtex_show={true}
 }
