--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   pages={12321--12340},
   year={2023},
   publisher={IEEE},
+  abbr={IEEE},
   pdf={https://arxiv.org/pdf/2206.03066.pdf},
   arxiv={2206.03066},
   bibtex_show={true}
@@ -18,6 +19,7 @@
   title={On Quantum Perceptron Learning via Quantum Search},
   author={Sun, Xiaoyu and Roget, Mathieu and Di Molfetta, Giuseppe and Kadri, Hachem},
   journal={arXiv preprint},
+  abbr={Preprint},
   year={2025},
   pdf={https://www.arxiv.org/pdf/2503.17308.pdf},
   arxiv={2503.17308},
